@startuml
left to right direction

title Factory Pattern Örneği

class Asi {
  -name : String
  -procedure : String
  -isVaccinated : Boolean
  +Asi()
  -getInfo()
  -vaccinate()
}

class Maske {
  -name : String
  -percentage : Number
  -isWeared : Boolean
  +Maske()
  -getInfo()
  -wear()
}

class CovidFactory {
  +CovidFactory
  +produceProduct : Object
}

CovidFactory --> Maske : <produces>
CovidFactory --> Asi : <produces>

@enduml